mvp and fixed nav stretch

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,124 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+.maxWidth {
+	max-width: 80%;
+	margin: auto;
+	position: relative;
+}
+
+.navBar {
+	padding: 20px 0 50px;
+	position: fixed;
+	height: 60px;
+	width: 80%;
+	top: 0;
+	background-color: #EAE7E1;
+	z-index: 999;
+}
+
+.logo {
+	display: inline-block;
+	position: absolute;
+	right: 0;
+}
+
+.navBar a {
+	text-decoration: none;
+	color: grey;
+	margin-right: 5%;
+	position: relative;
+	top: 10px;
+}
+
+header {
+	margin-top: 80px;
+	position: relative;
+	height: 499px;
+	border-bottom: 2px solid grey;
+}
+
+header img {
+	position: absolute;
+	right: 0;
+	top: 20;
+}
+
+.titleAndButtton {
+	display: inline-block;
+	height: 459px;
+	width: 500px;
+	text-align: center;
+	margin-left: 5%;
+}
+
+.title {
+	font-size: 90px;
+	text-align: center;
+	margin: 60px 60px 20px;
+}
+
+.button button {
+	width: 205px;
+	height: 40px;
+	font-size: 18px;
+}
+
+.button {
+	display: block;
+	text-align: center;
+}
+
+.inlineBlock {
+	display: inline-block;
+}
+
+.topContent {
+	margin: 40px 0 40px;
+}
+
+.topLeft {
+	width: 49%;
+}
+
+.topRight {
+	width: 49%;
+	position: absolute;
+	right: 0;
+}
+
+.middleImg {
+	width: 100%;
+}
+
+.bottomContent {
+	margin: 40px 0 40px;
+}
+
+.bottomLeft {
+	width: 32%;
+	margin-right: 1.3%;
+}
+
+.bottomCenter {
+	width: 32%;
+	margin-right: 1.3%;
+
+}
+
+.bottomRight {
+	width: 32%;
+	position: absolute;
+	right: 0;
+}
+
+.contact {
+	border-top: 2px solid grey;
+	padding-top: 40px;
+}
+
+footer {
+	text-align: center;
+	margin: 50px 0 100px;
+}
